syntax = "proto3";

// This is the package where the Java class below is written to.
package org.experimental.protobuf.generated;

// This is the Java class that is generated from the .proto file when executing `protoc`
option java_outer_classname = "AgentInfoProto";

import "version.proto";

message AgentInfoPB {
  VersionPB version = 1;
  string edition = 2;
  repeated string projects = 3;
  bool isDemoExpired = 4;
}
