syntax = "proto3";

// This is the package where the Java class below is written to.
package org.experimental.protobuf.generated;

// This is the Java class that is generated from the .proto file when executing `protoc`
option java_outer_classname = "VersionProto";

message VersionPB {
  int32 major = 1;
  int32 minor = 2;
  int32 rev = 3;
  int32 build = 4;
  sint32 beta = 5;
  sint32 rc = 6;
  bool dev = 7;
  bool snapshot = 8;
}
